--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
+    "semantic-ui-react": "^0.88.2",
     "web3": "^1.0.0-beta.26"
   },
   "scripts": {
